--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 streamlit
-tensorflow-cpu
-tensorflow-hub
+tensorflow-cpu==2.15.0
+tensorflow-hub==0.16.1
 pandas
-numpy
+numpy<2.0.0
 scikit-learn
-setuptools
+setuptools<70.0.0
